--- a/www/index.html
+++ b/www/index.html
@@ -636,7 +636,8 @@
                         <div class="col-12 col-sm-12 col-md-12 col-lg-12">
                             <textarea id="algorithm_html_textarea" rows="8"
                                 style="text-align:left; border: 1px solid #FFF;" placeholder="Enter html here..."
-                                value="{{algorithm.html}}"></textarea>
+                                value=""></textarea>
+                            <br>
                         </div>
                         <br>
                         <br>
@@ -663,6 +664,7 @@
                             <textarea id="algorithm_javascript_textarea" rows="8"
                                 style="text-align:left; border: 1px solid #FFF;" placeholder="Enter JavaScript here..."
                                 value="{{algorithm.client}}"></textarea>
+                            <br>
                         </div>
                         <br>
                     </div>
@@ -751,6 +753,8 @@
                     <button style="background-color: rgba(.25,.25,.25,.75);" type="button"
                         class="btn btn-outline-success mx-auto" onclick="state.add_stage()">Add Pipeline Stage</button>
                 </div>
+                <br>
+                <br>
             </div>
             <div class="col-0 col-sm-0 col-md-1 col-lg-2">
             </div>
