--- a/www/canvas.html
+++ b/www/canvas.html
@@ -3,6 +3,7 @@
 
 <head>
   <script type="text/javascript" src="js/protobuf.js"></script>
+  <script type="text/javascript" src="js/jquery.min.js"></script>
 
   <meta name="viewport" content="height = device-height, width = device-width, initial-scale = 1.0, minimum-scale = 1.0, maximum-scale = 1.0, user-scalable = no, target-densitydpi = high-dpi"
   />
