--- a/www/index.html
+++ b/www/index.html
@@ -1389,6 +1389,9 @@
                         ]
                     }
                 };
+
+                if (mainIframe) mainIframe.contentWindow.postMessage(JSON.stringify({ proto: default_create_algorithm}), '*');
+
                 this.show_page(pages.PROCESSING, "Connecting...", "Please be patient.", false, true);
                 this.connect();
             }.bind(this));
@@ -3608,26 +3611,26 @@
 
 
         window.onload = function () {
+            window.html_editor = CodeMirror.fromTextArea(document.getElementById("algorithm_html_textarea"), {
+                mode: "xml",
+                lineNumbers: false,
+                theme: "the-matrix",
+                autoRefresh: true,
+                lineWrapping: true
+            });
+            window.html_editor.getWrapperElement().id = "algorithm_html_codemirror"
+            window.javascript_editor = CodeMirror.fromTextArea(document.getElementById("algorithm_javascript_textarea"), {
+                mode: "javascript",
+                lineNumbers: false,
+                theme: "the-matrix",
+                autoRefresh: true,
+                lineWrapping: true
+            });
+            window.javascript_editor.getWrapperElement().id = "algorithm_javascript_codemirror"
+            window.html_editor.setValue('<!--Enter HTML here. -->');
+            window.javascript_editor.setValue('//Enter JavaScript here.');
             load_tree()
         }
-        window.html_editor = CodeMirror.fromTextArea(document.getElementById("algorithm_html_textarea"), {
-            mode: "xml",
-            lineNumbers: false,
-            theme: "the-matrix",
-            autoRefresh: true,
-            lineWrapping: true
-        });
-        window.html_editor.getWrapperElement().id = "algorithm_html_codemirror"
-        window.javascript_editor = CodeMirror.fromTextArea(document.getElementById("algorithm_javascript_textarea"), {
-            mode: "javascript",
-            lineNumbers: false,
-            theme: "the-matrix",
-            autoRefresh: true,
-            lineWrapping: true
-        });
-        window.javascript_editor.getWrapperElement().id = "algorithm_javascript_codemirror"
-        window.html_editor.setValue('<!--Enter HTML here. -->');
-        window.javascript_editor.setValue('//Enter JavaScript here.');
     </script>
 </body>
 
