--- a/www/index.html
+++ b/www/index.html
@@ -385,24 +385,24 @@
         style="text-align:center; display: none; position: relative;; z-index:5; left:0px; top:0px; width:100%; height:auto;"
         id="menu">
         <br>
-        <button type="button" style=" background-color: rgba(.25,.25,.25,.75);" class="btn btn-outline-success mx-auto"
+        <button type="button" style=" background-color: rgba(0,0,0,.75);" class="btn btn-outline-success mx-auto"
             onclick="state.show_page(pages.HOME); ">Home</button>
-        <button type="button" style=" background-color: rgba(.25,.25,.25,.75);" class="btn btn-outline-success mx-auto"
+        <button type="button" style=" background-color: rgba(0,0,0,.75);" class="btn btn-outline-success mx-auto"
             onclick="state.show_page(pages.BROWSE); ">Browse</button>
-        <button type="button" style=" background-color: rgba(.25,.25,.25,.75);" class="btn btn-outline-success mx-auto"
+        <button type="button" style=" background-color: rgba(0,0,0,.75);" class="btn btn-outline-success mx-auto"
             onclick="state.show_page(pages.EDIT); ">Edit</button>
-        <button type="button" style=" background-color: rgba(.25,.25,.25,.75);" class="btn btn-outline-success mx-auto"
+        <button type="button" style=" background-color: rgba(0,0,0,.75);" class="btn btn-outline-success mx-auto"
             onclick="state.show_page(pages.CREATE); ">Create</button>
-        <button id="menu_profile_button" style=" background-color: rgba(.25,.25,.25,.75);" type="button"
+        <button id="menu_profile_button" style=" background-color: rgba(0,0,0,.75);" type="button"
             class="logged_in_content btn btn-outline-success mx-auto"
             onclick="state.show_page(pages.PROFILE);;">Profile</button>
-        <button id="menu_login_button" style=" background-color: rgba(.25,.25,.25,.75);" type="button"
+        <button id="menu_login_button" style=" background-color: rgba(0,0,0,.75);" type="button"
             class="logged_out_content btn btn-outline-success mx-auto"
             onclick="state.show_page(pages.LOGIN);">Login</button>
-        <button id="menu_signup_button" style=" background-color: rgba(.25,.25,.25,.75);" type="button"
+        <button id="menu_signup_button" style=" background-color: rgba(0,0,0,.75);" type="button"
             class="logged_out_content btn btn-outline-success mx-auto" onclick="state.show_page(pages.SIGNUP);">Sign
             Up</button>
-        <button id="menu_logout_button" style=" background-color: rgba(.25,.25,.25,.75);" type="button"
+        <button id="menu_logout_button" style=" background-color: rgba(0,0,0,.75);" type="button"
             class="logged_in_content btn btn-outline-danger mx-auto" onclick="state.show_page(pages.LOGOUT);">Log
             Out</button>
     </div>
@@ -446,13 +446,13 @@
                         <button type="button" class="btn btn-outline-primary mx-auto"
                             onclick="state.show_page(pages.POLICY);">View
                             Privacy Policy</button>
-                        <button type="button" style=" background-color: rgba(.25,.25,.25,.75);"
+                        <button type="button" style=" background-color: rgba(0,0,0,.75);"
                             class="btn btn-outline-success mx-auto"
                             onclick="state.show_page(pages.BROWSE); ">Browse</button>
-                        <button type="button" style=" background-color: rgba(.25,.25,.25,.75);"
+                        <button type="button" style=" background-color: rgba(0,0,0,.75);"
                             class="btn btn-outline-success mx-auto"
                             onclick="state.show_page(pages.EDIT); ">Edit</button>
-                        <button type="button" style=" background-color: rgba(.25,.25,.25,.75);"
+                        <button type="button" style=" background-color: rgba(0,0,0,.75);"
                             class="btn btn-outline-success mx-auto"
                             onclick="state.show_page(pages.CREATE); ">Create</button>
                         <button type="button" class="btn btn-outline-success mx-auto"
@@ -728,7 +728,7 @@
                     <a>WebGL Contexts</a>
                     <div id="algorithm_contexts">
                     </div>
-                    <button style="background-color: rgba(.25,.25,.25,.75);" type="button"
+                    <button style="background-color: rgba(0,0,0,.75);" type="button"
                         class="btn btn-outline-success mx-auto" onclick="state.add_context()">Add Context</button>
                 </div>
                 <br>
@@ -737,7 +737,7 @@
                     <a>WebGL Programs</a>
                     <div id="algorithm_programs">
                     </div>
-                    <button style="background-color: rgba(.25,.25,.25,.75);" type="button"
+                    <button style="background-color: rgba(0,0,0,.75);" type="button"
                         class="btn btn-outline-success mx-auto" onclick="state.add_program()">Add Program</button>
                 </div>
                 <br>
@@ -747,7 +747,7 @@
                     <div id="algorithm_stages">
                     </div>
                     <br>
-                    <button style="background-color: rgba(.25,.25,.25,.75);" type="button"
+                    <button style="background-color: rgba(0,0,0,.75);" type="button"
                         class="btn btn-outline-success mx-auto" onclick="state.add_stage()">Add Pipeline Stage</button>
                 </div>
                 <br>
