--- a/www/index.html
+++ b/www/index.html
@@ -682,7 +682,7 @@
                     <div class="row" style="border-top: 1px solid #fff;">
                         <div class="col-12 col-sm-12 col-md-12 col-lg-12">
                             <br>
-                            <button type="button" onclick="state.coming_soon()"
+                            <button  style="background-color: rgba(0,0,0,.75);" type="button" onclick="state.coming_soon()"
                                 class="btn btn-outline-success mx-auto">Add Image</button>
                             <br>
                         </div>
@@ -699,7 +699,7 @@
                     <div class="row" style="border-top: 1px solid #fff;">
                         <div class="col-12 col-sm-12 col-md-12 col-lg-12">
                             <br>
-                            <button type="button" onclick="state.coming_soon()"
+                            <button  style="background-color: rgba(0,0,0,.75);" type="button" onclick="state.coming_soon()"
                                 class="btn btn-outline-success mx-auto">Add Sound</button>
                             <br>
                         </div>
@@ -716,7 +716,7 @@
                     <div class="row" style="border-top: 1px solid #fff;">
                         <div class="col-12 col-sm-12 col-md-12 col-lg-12">
                             <br>
-                            <button type="button" onclick="state.coming_soon()"
+                            <button  style="background-color: rgba(0,0,0,.75);" type="button" onclick="state.coming_soon()"
                                 class="btn btn-outline-success mx-auto">Add Video</button>
                             <br>
                         </div>
