--- a/www/index.html
+++ b/www/index.html
@@ -936,7 +936,7 @@
             style="display: none; position:absolute; left:0px; top:0px; width:100%; height:100%;">
             <div class="col-0 col-sm-0 col-md-1 col-lg-2">
             </div>
-            <form class="col-12 col-sm-12 col-md-10 col-lg-8">
+            <div class="col-12 col-sm-12 col-md-10 col-lg-8">
                 <h1
                     style="text-align:center; color:#fff; font-size: 14px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                     <br>
@@ -1013,7 +1013,7 @@
                     <br>
                     <br>
                 </h1>
-            </form>
+            </div>
             <div class="col-0 col-sm-0 col-md-1 col-lg-2">
             </div>
         </div>
