--- a/www/canvas.html
+++ b/www/canvas.html
@@ -1091,7 +1091,7 @@
     }
     function handle_proto(proto) {
       custom_event_handler = null;
-      userAlgorithm = proto.algorithm;
+      userAlgorithm = proto;
       reload();
     }
     
