--- a/www/canvas.html
+++ b/www/canvas.html
@@ -53,10 +53,11 @@
     }
 
     var is_safari = (navigator.userAgent.indexOf("iPhone") > -1 || navigator.userAgent.indexOf("iPad") > -1 || navigator.userAgent.indexOf("Safari") > -1) && navigator.userAgent.indexOf("Chrome") == -1;
-    var Auth, Image, Video, Sound, Person, Comment, MetaAlgorithm, 
-        Query, Catalog, Vote, OpenGLDimension, OpenGLUniform, OpenGLContext, 
-        OpenGLProgram, OpenGLStage, OpenGLPipeline, AlgorithmState, 
-        Algorithm, Custom, Error, Captcha, Message;
+    // var Auth, Image, Video, Sound, Person, Comment, MetaAlgorithm, 
+    //     Query, Catalog, Vote, OpenGLDimension, OpenGLUniform, OpenGLContext, 
+    //     OpenGLProgram, OpenGLStage, OpenGLPipeline, AlgorithmState, 
+    //     Algorithm, Custom, Error, Captcha;
+    var Message;
 
 
     function waitForProto(cb) {
@@ -68,26 +69,26 @@
 
             // Obtain a message type
             this.protocol = root;
-            Auth = this.protocol.lookupType("messages.Auth");
-            Video = this.protocol.lookupType("messages.Video");
-            Sound = this.protocol.lookupType("messages.Sound");
-            Person = this.protocol.lookupType("messages.Person");
-            Comment = this.protocol.lookupType("messages.Comment");
-            MetaAlgorithm = this.protocol.lookupType("messages.MetaAlgorithm");
-            Query = this.protocol.lookupType("messages.Query");
-            Catalog = this.protocol.lookupType("messages.Catalog");
-            Vote = this.protocol.lookupType("messages.Vote");
-            OpenGLDimension = this.protocol.lookupType("messages.OpenGLDimension");
-            OpenGLUniform = this.protocol.lookupType("messages.OpenGLUniform");
-            OpenGLContext = this.protocol.lookupType("messages.OpenGLContext");
-            OpenGLProgram = this.protocol.lookupType("messages.OpenGLProgram");
-            OpenGLStage = this.protocol.lookupType("messages.OpenGLStage");
-            OpenGLPipeline = this.protocol.lookupType("messages.OpenGLPipeline");
-            AlgorithmState = this.protocol.lookupType("messages.AlgorithmState");
-            Algorithm = this.protocol.lookupType("messages.Algorithm");
-            Custom = this.protocol.lookupType("messages.Custom");
-            Error = this.protocol.lookupType("messages.Error");
-            Captcha = this.protocol.lookupType("messages.Captcha");
+            // Auth = this.protocol.lookupType("messages.Auth");
+            // Video = this.protocol.lookupType("messages.Video");
+            // Sound = this.protocol.lookupType("messages.Sound");
+            // Person = this.protocol.lookupType("messages.Person");
+            // Comment = this.protocol.lookupType("messages.Comment");
+            // MetaAlgorithm = this.protocol.lookupType("messages.MetaAlgorithm");
+            // Query = this.protocol.lookupType("messages.Query");
+            // Catalog = this.protocol.lookupType("messages.Catalog");
+            // Vote = this.protocol.lookupType("messages.Vote");
+            // OpenGLDimension = this.protocol.lookupType("messages.OpenGLDimension");
+            // OpenGLUniform = this.protocol.lookupType("messages.OpenGLUniform");
+            // OpenGLContext = this.protocol.lookupType("messages.OpenGLContext");
+            // OpenGLProgram = this.protocol.lookupType("messages.OpenGLProgram");
+            // OpenGLStage = this.protocol.lookupType("messages.OpenGLStage");
+            // OpenGLPipeline = this.protocol.lookupType("messages.OpenGLPipeline");
+            // AlgorithmState = this.protocol.lookupType("messages.AlgorithmState");
+            // Algorithm = this.protocol.lookupType("messages.Algorithm");
+            // Custom = this.protocol.lookupType("messages.Custom");
+            // Error = this.protocol.lookupType("messages.Error");
+            // Captcha = this.protocol.lookupType("messages.Captcha");
             Message = this.protocol.lookupType("messages.Message");
             cb();
       }.bind(this)}(cb)));
