--- a/www/index.html
+++ b/www/index.html
@@ -1281,6 +1281,7 @@
                 }
 
                 default_create_algorithm = {
+                    type: Message.Type.ALGORITHM,
                     state: {
                         has_html: false,
                         has_client: true,
