--- a/www/canvas.html
+++ b/www/canvas.html
@@ -57,7 +57,7 @@
     //     Query, Catalog, Vote, OpenGLDimension, OpenGLUniform, OpenGLContext, 
     //     OpenGLProgram, OpenGLStage, OpenGLPipeline, AlgorithmState, 
     //     Algorithm, Custom, Error, Captcha;
-    var Message, OpenGLDimension, OpenGLUniform;
+    var Message, OpenGLDimension, OpenGLUniform, OpenGLStage;
 
 
     function waitForProto(cb) {
@@ -82,7 +82,7 @@
             OpenGLUniform = this.protocol.lookupType("messages.OpenGLUniform");
             // OpenGLContext = this.protocol.lookupType("messages.OpenGLContext");
             // OpenGLProgram = this.protocol.lookupType("messages.OpenGLProgram");
-            // OpenGLStage = this.protocol.lookupType("messages.OpenGLStage");
+            OpenGLStage = this.protocol.lookupType("messages.OpenGLStage");
             // OpenGLPipeline = this.protocol.lookupType("messages.OpenGLPipeline");
             // AlgorithmState = this.protocol.lookupType("messages.AlgorithmState");
             // Algorithm = this.protocol.lookupType("messages.Algorithm");
