--- a/www/index.html
+++ b/www/index.html
@@ -1200,26 +1200,26 @@
 
                 // Obtain a message type
                 this.protocol = root;
-                Auth = this.protocol.lookupType("messages.Auth");
-                Video = this.protocol.lookupType("messages.Video");
-                Sound = this.protocol.lookupType("messages.Sound");
-                Person = this.protocol.lookupType("messages.Person");
-                Comment = this.protocol.lookupType("messages.Comment");
-                MetaAlgorithm = this.protocol.lookupType("messages.MetaAlgorithm");
-                Query = this.protocol.lookupType("messages.Query");
-                Catalog = this.protocol.lookupType("messages.Catalog");
-                Vote = this.protocol.lookupType("messages.Vote");
-                OpenGLDimension = this.protocol.lookupType("messages.OpenGLDimension");
-                OpenGLUniform = this.protocol.lookupType("messages.OpenGLUniform");
-                OpenGLContext = this.protocol.lookupType("messages.OpenGLContext");
-                OpenGLProgram = this.protocol.lookupType("messages.OpenGLProgram");
-                OpenGLStage = this.protocol.lookupType("messages.OpenGLStage");
-                OpenGLPipeline = this.protocol.lookupType("messages.OpenGLPipeline");
-                AlgorithmState = this.protocol.lookupType("messages.AlgorithmState");
-                Algorithm = this.protocol.lookupType("messages.Algorithm");
-                Custom = this.protocol.lookupType("messages.Custom");
-                Error = this.protocol.lookupType("messages.Error");
-                Captcha = this.protocol.lookupType("messages.Captcha");
+                // Auth = this.protocol.lookupType("messages.Auth");
+                // Video = this.protocol.lookupType("messages.Video");
+                // Sound = this.protocol.lookupType("messages.Sound");
+                // Person = this.protocol.lookupType("messages.Person");
+                // Comment = this.protocol.lookupType("messages.Comment");
+                // MetaAlgorithm = this.protocol.lookupType("messages.MetaAlgorithm");
+                // Query = this.protocol.lookupType("messages.Query");
+                // Catalog = this.protocol.lookupType("messages.Catalog");
+                // Vote = this.protocol.lookupType("messages.Vote");
+                // OpenGLDimension = this.protocol.lookupType("messages.OpenGLDimension");
+                // OpenGLUniform = this.protocol.lookupType("messages.OpenGLUniform");
+                // OpenGLContext = this.protocol.lookupType("messages.OpenGLContext");
+                // OpenGLProgram = this.protocol.lookupType("messages.OpenGLProgram");
+                // OpenGLStage = this.protocol.lookupType("messages.OpenGLStage");
+                // OpenGLPipeline = this.protocol.lookupType("messages.OpenGLPipeline");
+                // AlgorithmState = this.protocol.lookupType("messages.AlgorithmState");
+                // Algorithm = this.protocol.lookupType("messages.Algorithm");
+                // Custom = this.protocol.lookupType("messages.Custom");
+                // Error = this.protocol.lookupType("messages.Error");
+                // Captcha = this.protocol.lookupType("messages.Captcha");
                 Message = this.protocol.lookupType("messages.Message");
 
                 default_opengl_dimension = {
