--- a/www/index.html
+++ b/www/index.html
@@ -1209,7 +1209,7 @@
                 // Query = this.protocol.lookupType("messages.Query");
                 // Catalog = this.protocol.lookupType("messages.Catalog");
                 // Vote = this.protocol.lookupType("messages.Vote");
-                // OpenGLDimension = this.protocol.lookupType("messages.OpenGLDimension");
+                OpenGLDimension = this.protocol.lookupType("messages.OpenGLDimension");
                 // OpenGLUniform = this.protocol.lookupType("messages.OpenGLUniform");
                 // OpenGLContext = this.protocol.lookupType("messages.OpenGLContext");
                 // OpenGLProgram = this.protocol.lookupType("messages.OpenGLProgram");
