--- a/www/index.html
+++ b/www/index.html
@@ -1210,7 +1210,7 @@
                 // Catalog = this.protocol.lookupType("messages.Catalog");
                 // Vote = this.protocol.lookupType("messages.Vote");
                 OpenGLDimension = this.protocol.lookupType("messages.OpenGLDimension");
-                // OpenGLUniform = this.protocol.lookupType("messages.OpenGLUniform");
+                OpenGLUniform = this.protocol.lookupType("messages.OpenGLUniform");
                 // OpenGLContext = this.protocol.lookupType("messages.OpenGLContext");
                 // OpenGLProgram = this.protocol.lookupType("messages.OpenGLProgram");
                 // OpenGLStage = this.protocol.lookupType("messages.OpenGLStage");
