--- a/www/index.html
+++ b/www/index.html
@@ -1213,7 +1213,7 @@
                 OpenGLUniform = this.protocol.lookupType("messages.OpenGLUniform");
                 // OpenGLContext = this.protocol.lookupType("messages.OpenGLContext");
                 // OpenGLProgram = this.protocol.lookupType("messages.OpenGLProgram");
-                // OpenGLStage = this.protocol.lookupType("messages.OpenGLStage");
+                OpenGLStage = this.protocol.lookupType("messages.OpenGLStage");
                 // OpenGLPipeline = this.protocol.lookupType("messages.OpenGLPipeline");
                 // AlgorithmState = this.protocol.lookupType("messages.AlgorithmState");
                 // Algorithm = this.protocol.lookupType("messages.Algorithm");
